--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,21 @@
 .carrousel{
-    width:300px ;
-    height: 300px;
-    background-color: rgb(81, 108, 93);
+    position: absolute;
+    left: 25vw;
+    top: 45vh;
+    width:50vw ;
+    height: 50vh;
+    background-color: rgb(85, 143, 111);
+    opacity: 0.5;
+    transform: scale(0);
+    transition: transform 1s;
+
+}
+.carrousel--ouvrir{
+    transform: scale(1);
+}
+.btn_fermer{
+    display: flex;
+
+
+
 }
