modification style de boite-modal, ajoute image dans galerie

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,9 +12,16 @@
 }
 .carrousel--ouvrir{
     transform: scale(1);
+    
 }
 .btn_fermer{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    right: 0;
+    top: 0;
+
 
 
 
