--- a/style.css
+++ b/style.css
@@ -16,4 +16,9 @@
 
 .btn_fermer {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 0;
+  top: 0;
 }/*# sourceMappingURL=style.css.map */
