--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,11 +8,11 @@
     opacity: 0.5;
     transform: scale(0);
     transition: transform 1s;
-
+    z-index: 1;
 }
 .carrousel--ouvrir{
     transform: scale(1);
-    
+    opacity: 1;
 }
 .btn_fermer{
     display: flex;
@@ -23,4 +23,33 @@
     top: 0;
     width: 2rem;
     height: 2rem;
+}
+.carrousel__figure{
+    position: relative;
+
+}
+.carrousel__figure__img{
+    display: block;
+    position:absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    width: 100%;
+    //height: 100%;
+    opacity: 0;
+    transition: opacity 1s;
+}
+.carrousel__figure__img--activer{
+  opacity: 1; 
+
+}
+
+.carrousel__form{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
 }
