--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 .carrousel {
   position: absolute;
   left: 25vw;
-  top: 55vh;
+  top: 45vh;
   width: 50vw;
   height: 50vh;
   background-color: rgb(85, 143, 111);
   opacity: 0.5;
   transform: scale(0);
   transition: transform 1s;
+  z-index: 1;
 }
 
 .carrousel--ouvrir {
   transform: scale(1);
+  opacity: 1;
 }
 
 .btn_fermer {
@@ -23,4 +25,33 @@
   top: 0;
   width: 2rem;
   height: 2rem;
+}
+
+.carrousel__figure {
+  position: relative;
+}
+
+.carrousel__figure__img {
+  display: block;
+  position: absolute;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.carrousel__figure__img--activer {
+  opacity: 1;
+}
+
+.carrousel__form {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
 }/*# sourceMappingURL=style.css.map */
