--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
   position: absolute;
   left: 25vw;
   top: 45vh;
-  width: 50vw;
-  height: 50vh;
-  background-color: rgb(85, 143, 111);
+  width: 60vw;
+  height: 90vh;
+  background-color: rgb(79, 8, 3);
   opacity: 0.5;
   transform: scale(0);
   transition: transform 1s;
@@ -29,15 +29,18 @@
 
 .carrousel__figure {
   position: relative;
+  height: 80%;
+  margin: 25px;
 }
 
 .carrousel__figure__img {
   display: block;
   position: absolute;
-  object-fit: cover;
+  object-fit: contain;
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   opacity: 0;
   transition: opacity 1s;
 }
