cours10 amelioration d'apparence du vue principal- modification dans couleurs.scss

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,10 @@
 .carrousel{
     position: absolute;
-    left: 25vw;
+    left: 30vw;
     top: 45vh;
     width:60vw ;
     height: 90vh;
-    background-color: rgb(79, 8, 3);
+    background-color: #6c0303;
     opacity: 0.5;
     transform: scale(0);
     transition: transform 1s;
