--- a/style.css
+++ b/style.css
@@ -57,4 +57,8 @@
   display: flex;
   justify-content: center;
   margin: 1rem;
+}
+
+.btn_modale {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
