--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,3 +58,23 @@
 .btn_modale{
     display: none;
   }
+.btn_fleche_gauche{
+    position:absolute;
+    z-index:1;
+    color: antiquewhite;
+    bottom: 0;
+    top: 50%;
+    height: 50px;
+   
+}
+.btn_fleche_droit{
+    position:absolute;
+    z-index:1;
+    color: antiquewhite;
+    bottom: 0;
+    right: 0;
+    top: 50%;
+    height: 50px;
+   display: flex;
+    
+}
