--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,13 @@
-.carrousel{
+.carrousel,
+.btn_fermer,
+.carrousel__figure__img,
+.carrousel__form,
+.btn_fleche_gauche, 
+.btn_fleche_droit{
     position: absolute;
+}
+
+.carrousel{
     left: 30vw;
     top: 45vh;
     width:60vw ;
@@ -18,7 +26,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
     right: 0;
     top: 0;
     width: 2rem;
@@ -33,7 +40,6 @@
 }
 .carrousel__figure__img{
     display: block;
-    position:absolute;
     object-fit:cover;
     top: 0;
     left: 0;
@@ -48,7 +54,6 @@
 }
 
 .carrousel__form{
-    position: absolute;
     bottom: 0;
     width: 100%;
     z-index: 3;
@@ -59,23 +64,17 @@
 .btn_modale{
     display: none;
   }
-.btn_fleche_gauche{
-    position:absolute;
-    z-index:1;
-    color: antiquewhite;
-    bottom: 0;
-    top: 50%;
-    height: 50px;
-   
-}
+
+.btn_fleche_gauche, 
 .btn_fleche_droit{
-    position:absolute;
     z-index:1;
     color: antiquewhite;
     bottom: 0;
-    right: 0;
     top: 50%;
     height: 50px;
-   display: flex;
-    
+}
+
+
+.btn_fleche_droit{    
+    right: 0;    
 }
